// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Find by email user service Should get user: findByEmailOrUsernameQuery 1`] = `
Object {
  "email": "email@example.com",
}
`;

exports[`Find by email user service Should get user: findByEmailOrUsernameResult 1`] = `
Object {
  "_id": "62c526bb503a77b155f6eba5",
  "email": "email@example.com",
  "name": "Name",
  "password": "password",
  "username": "username",
}
`;

exports[`Find by email user service Should reject with 404: findByEmailOrUsername404Query 1`] = `
Object {
  "email": "email2@example.com",
}
`;
